# mycelium

./: .cz.toml  .dockerignore  .env.example  .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT. md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.common.yaml  docker-compose.yaml  release.toml  run-test-servers.sh
adapters/diesel/: CHANGELOG.md  Cargo.toml
adapters/diesel/sql/: up.sql
adapters/diesel/sql/migrations/: 20260421_01_envelope_encryption.sql
adapters/diesel/src/: lib.rs  schema.rs
adapters/diesel/src/migration/: migrate_dek.rs  mod.rs  rotate_kek.rs  tenant_iteration.rs
adapters/diesel/src/models/: account.rs  account_tag.rs  config.rs  error_code.rs  guest_role.rs  guest_role_children.rs  guest_user.rs  guest_user_on_account.rs  health_check_info.rs  identity_provider.rs  internal_error.rs  licensed_resource.rs  message.rs  mod.rs  module.rs  owner_on_tenant.rs  public_connection_string_info.rs  tenant.rs  tenant_tag.rs  token.rs  user.rs  webhook.rs  webhook_execution.rs
adapters/diesel/src/repositories/: config.rs  encryption_key.rs  mod.rs  optional_written_by_parser.rs
adapters/infra/prisma/: Cargo.toml
adapters/infra/prisma/src/: lib.rs  main.rs  prisma.rs  schema.prisma
adapters/infra/service/: Cargo.toml
adapters/kv_db/: CHANGELOG.md  Cargo.toml
adapters/kv_db/src/: lib.rs
adapters/kv_db/src/executor/: mod.rs
adapters/kv_db/src/models/: config.rs  mod.rs  tmp_config.rs
adapters/kv_db/src/repositories/: kv_artifact_read.rs  kv_artifact_write.rs  message_sending_queue.rs  mod.rs
adapters/mem_db/: CHANGELOG.md  Cargo.toml
adapters/mem_db/src/models/: config.rs
adapters/mem_db/src/repositories/: config.rs  mod.rs  routes_fetching.rs  routes_read.rs  service_read.rs  service_write.rs  shared.rs
adapters/message/smtp/: Cargo.toml
adapters/notifier/: CHANGELOG.md  Cargo.toml
adapters/notifier/src/: lib.rs  settings.rs
adapters/notifier/src/executor/: mod.rs
adapters/notifier/src/models/: config.rs  queue_config.rs  smtp_config.rs
adapters/notifier/src/repositories/: config.rs  connector.rs  local_message_sending.rs  message_sending_queue.rs  message_sending_smtp.rs  mod.rs  remote_message_sending.rs
adapters/prisma/: Cargo.toml
adapters/prisma/src/: lib.rs  prisma.rs  schema.prisma
adapters/prisma/src/models/: config.rs  mod.rs
adapters/prisma/src/repositories/: account_deletion.rs  account_fetching.rs  account_registration.rs  account_tag_deletion.rs  account_tag_registration.rs  account_type_deletion.rs  account_type_registration.rs  account_updating.rs  connector.rs  error_code_deletion.rs  error_code_fetching.rs  error_code_registration.rs  error_code_updating.rs  guest_role_deletion.rs  guest_role_fetching.rs  guest_role_registration.rs  guest_role_updating.rs  guest_user_deletion.rs  guest_user_fetching.rs  guest_user_on_account_updating.rs  guest_user_registration.rs  licensed_resources_fetching.rs  mod.rs  profile_fetching.rs  role_deletion.rs  role_fetching.rs  role_registration.rs  role_updating.rs  session_token_deletion.rs  session_token_fetching.rs  session_token_registration.rs  tag_deletion.rs  tag_registration.rs  tag_updating.rs  tenant_deletion.rs  tenant_fetching.rs  tenant_registration.rs  tenant_tag_deletion.rs  tenant_tag_registration.rs  tenant_tag_updating.rs  (+12 more)
adapters/redis/: Cargo.toml
adapters/redis/src/: lib.rs
adapters/redis/src/repositories/: connector.rs  connectors.rs  mod.rs  models.rs  session_token_deletion.rs  session_token_fetching.rs  session_token_registration.rs  session_token_updating.rs  token_cleanup.rs  token_deregistration.rs  (+1 more)
adapters/service/: CHANGELOG.md  Cargo.toml
adapters/service/src/: lib.rs  settings.rs
adapters/shared/: CHANGELOG.md  Cargo.toml
adapters/smtp/: Cargo.toml
adapters/smtp/src/: lib.rs  settings.rs
base/: CHANGELOG.md  Cargo.toml
base/src/: lib.rs
base/src/dtos/: children.rs  generic_map.rs  kv_artifact.rs  mod.rs  paginated_record.rs  parent.rs
base/src/entities/: default_response.rs  mod.rs
config/: CHANGELOG.md  Cargo.toml
config/src/: lib.rs  settings.rs
config/src/models/: config.rs
config/src/use_cases/: load_config_from_file.rs
config/tests/: config.yaml
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: lib.rs  settings.rs
core/src/domain/: mod.rs
core/src/models/: account_life_cycle.rs  account_life_cycle_config.rs  config.rs  hmac_secret_set.rs  mod.rs  webhook_config.rs
core/src/use_cases/: mod.rs
docs/: crates.js  (+4 more)
http_tools/: CHANGELOG.md  Cargo.toml
http_tools/src/: lib.rs  responses.rs  settings.rs
http_tools/src/dtos/: claims.rs  gateway_profile_data.rs  mod.rs
http_tools/src/functions/: decode_jwt.rs  encode_jwt.rs  mod.rs
http_tools/src/middleware/: fetch_profile_from_header.rs  mod.rs
http_tools/src/models/: auth_config.rs  external_providers_config.rs  internal_auth_config.rs  mod.rs
http_tools/src/providers/: mod.rs
http_tools/src/utils/: json_response.rs  mod.rs
http_tools/src/wrappers/: default_response_to_http_response.rs  mod.rs
lib/base/: CHANGELOG.md  Cargo.toml
lib/base/src/: lib.rs
lib/config/: CHANGELOG.md  Cargo.toml
lib/config/src/: lib.rs
lib/config/tests/: config.toml  config.yaml
lib/http_tools/: CHANGELOG.md  Cargo.toml
lib/http_tools/src/: lib.rs  settings.rs
lib/openapi/: CHANGELOG.md  Cargo.toml  example-openapi.json
lib/openapi/src/: lib.rs
myc_api/: Cargo.toml
myc_api/api/: config.rs  main.rs
myc_api/api/endpoints/: manager.rs  service.rs
myc_api/api/modules/: manager.rs
myc_api/public/: extractor.rs  lib.rs
myc_core/: Cargo.toml
myc_prisma/: Cargo.toml
myc_prisma/src/: prisma.rs
mycelium/: Cargo.toml
mycelium/src/: settings.rs
mycelium/src/adapters/: mod.rs
mycelium/src/public/: extractor.rs
mycelium/src/use_cases/: mod.rs
test/downstream_service/: CHANGELOG.md  Cargo.toml  README.md
test/downstream_service/src/: api_docs.rs  endpoints.rs  main.rs  redoc-intro.md  redoc.config.json
(+3942 files in other folders)
