# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace]

members = [
    "base",
    "config",
    "core",
    "http_tools",
    "ports/*",
    "adapters/*",
    "test/bin",
]

default-members = [
    "base",
    "config",
    "core",
    "http_tools",
    "ports/*",
    "adapters/*",
]

resolver = "2"


# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace.package]

version = "7.9.0+dev"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/sgelias/mycelium"
readme = "./README.md"
keywords = ["authorization", "identity", "permission", "keeper"]
categories = ["development-tools", "web-programming::http-server"]


# ? ----------------------------------------------------------------------------
# ? Workspace dependencies
# ? ----------------------------------------------------------------------------

[workspace.dependencies]

#
# Dependabot security vulnerabilities:
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/3
#
hashbrown = "0.15.2"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/4
#
idna = ">=1.0.0"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/5
#
openssl = ">=0.10.70"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/6
#
ring = ">=0.17.12"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/7
#
zip = "=2.4.2"

actix-web = { version = "4", features = ["openssl"] }
actix-web-httpauth = "0.8.0"
async-trait = "0.1"
awc = { version = "3", features = ["openssl"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
jsonwebtoken = "8.2"
jwt = "0.16.0"
lazy_static = "1.4"
oauth2 = "4.4"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shaku = "0.6"
tokio = { version = "1", features = ["full"] }
url = "2.2"
utoipa = { version = "5", features = [
    "actix_extras",
    "chrono",
    "debug",
    "openapi_extensions",
    "preserve_order",
    "uuid",
] }
tracing = "0.1"
uuid = { version = "1.1", features = ["v3", "v4", "serde", "fast-rng"] }


[workspace.metadata.release]

sign-commit = false
sign-tag = false
push = true
tag-name = "{{version}}"
tag-message = "Release {{version}}"
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

# For multiple packages
consolidate-commits = true
