# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace]

members = ["core", "lib/*", "ports/*", "adapters/*", "test/downstream_service"]

default-members = ["core", "lib/*", "ports/*", "adapters/*"]

exclude = ["test/downstream_service"]

resolver = "2"


# ? ----------------------------------------------------------------------------
# ? Workspace general configuration
# ? ----------------------------------------------------------------------------

[workspace.package]

version = "8.2.1-rc.3"
edition = "2021"
authors = ["Samuel Galvão Elias <sgelias@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/sgelias/mycelium"
readme = "./README.md"
keywords = ["authorization", "identity", "permission", "keeper"]
categories = ["development-tools", "web-programming::http-server"]


# ? ----------------------------------------------------------------------------
# ? Workspace dependencies
# ? ----------------------------------------------------------------------------

[workspace.dependencies]

#
# Dependabot security vulnerabilities:
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/3
#
hashbrown = "0.15.2"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/4
#
idna = ">=1.0.0"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/5
#
openssl = ">=0.10.70"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/6
#
ring = ">=0.17.12"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/13
#
slab = "=0.4.11"
#
# - https://github.com/LepistaBioinformatics/mycelium/security/dependabot/7
#
zip = "=2.4.2"

actix-web = { version = "4", features = ["openssl"] }
actix-web-httpauth = "0.8.0"
async-trait = "0.1"
awc = { version = "3", features = ["openssl"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
http = "1.3"
jsonwebtoken = "8.2"
jwt = "0.16.0"
lazy_static = "1.4"
oauth2 = "4.4"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"] }
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
slugify = "0.1.0"
tokio = { version = "1.46", features = ["full"] }
url = "2.2"
utoipa = { version = "5", features = [
    "actix_extras",
    "chrono",
    "debug",
    "openapi_extensions",
    "preserve_order",
    "uuid",
] }
tracing = "0.1"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_29"] }
tracing-subscriber = { version = "0.3.19", features = [
    "alloc",
    "json",
    "env-filter",
    "tracing-serde",
    "registry",
] }
toml = "0.9"
uuid = { version = "1.1", features = ["v3", "v4", "v7", "serde", "fast-rng"] }
utoipa-redoc = { version = "5", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
wildmatch = "2.1"
zstd = "0.13"

# ------------------------------------------------------------------------------
# Mycelium packages
# ------------------------------------------------------------------------------

myc-core = { version = "8.2.1-rc.3", path = "core" }
mycelium-base = { version = "8.2.1-rc.3", path = "lib/base" }
mycelium-config = { version = "8.2.1-rc.3", path = "lib/config" }
mycelium-openapi = { version = "8.2.1-rc.3", path = "lib/openapi" }
mycelium-http-tools = { version = "8.2.1-rc.3", path = "lib/http_tools" }
mycelium-memory-db = { version = "8.2.1-rc.3", path = "adapters/mem_db" }
mycelium-service = { version = "8.2.1-rc.3", path = "adapters/service" }
mycelium-diesel = { version = "8.2.1-rc.3", path = "adapters/diesel" }
mycelium-notifier = { version = "8.2.1-rc.3", path = "adapters/notifier" }
mycelium-adapters-shared-lib = { version = "8.2.1-rc.3", path = "adapters/shared" }
mycelium-key-value = { version = "8.2.1-rc.3", path = "adapters/kv_db" }

[workspace.metadata.release]

shared-version = true
sign-commit = false
sign-tag = false
push = true
tag-name = "{{version}}"
tag-message = "Release {{version}}"
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

# For multiple packages
consolidate-commits = true
