[package]
name = "mycelium-config"
description = "Provide config manager features of the Mycelium project as and use-cases."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


# ? ----------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ----------------------------------------------------------------------------

[dependencies]
clean-base.workspace = true

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

# ? ----------------------------------------------------------------------------
# ? LIBRARY
# ? ----------------------------------------------------------------------------

[lib]
name = "myc_config"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
