[package]
name = "mycelium-config"
description = "Provide config manager features of the Mycelium project as and use-cases."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


# ? ----------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ----------------------------------------------------------------------------

[dependencies]

mycelium-base = { version = "5.0.4", path = "../base" }

serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tokio.workspace = true

# ? ----------------------------------------------------------------------------
# ? LIBRARY
# ? ----------------------------------------------------------------------------

[lib]
name = "myc_config"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
