[package]
name = "myc-core"
description = "Provide base features of the Mycelium project as s and Use-cases."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


# ? ---------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ---------------------------------------------------------------------------

[dependencies]

async-trait.workspace = true
chrono.workspace = true
env_logger.workspace = true
futures.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
log.workspace = true
mycelium-config.workspace = true
mycelium-base.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shaku.workspace = true
shaku_actix.workspace = true
utoipa.workspace = true
uuid.workspace = true
tokio.workspace = true

actix-web = { version = "4", features = ["openssl"] }
actix-web-httpauth = "0.8.0"
argon2 = "0.5.2"
enum-iterator = "1.4.0"
hex = "0.4.3"
pasetors = "0.6"
slugify = "0.1.0"

[dev-dependencies]
test-log = "0.2.8"
mockall = "0.11.4"

# ? ---------------------------------------------------------------------------
# ? LIBRARY
# ? ---------------------------------------------------------------------------

[lib]
name = "myc_core"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
