[package]
name = "myc-core"
description = "Provide base features of the Mycelium project as s and Use-cases."
readme = "README.md"

version = "8.3.1-beta.2"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


# ? ---------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ---------------------------------------------------------------------------

[dependencies]

async-trait.workspace = true
chrono.workspace = true
base64.workspace = true
env_logger.workspace = true
futures.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
slugify.workspace = true
utoipa.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true

argon2 = "0.5"
base32 = "0.4"
enum-iterator = "1.4.0"
hmac = "0.12"
sha2 = "0.10"
tera = "1"
pasetors = "0.6"
ring = "0.17"
totp-rs = { version = "^5.0", features = ["otpauth", "qr"] }

# ------------------------------------------------------------------------------
# Mycelium packages
# ------------------------------------------------------------------------------

mycelium-base.workspace = true
mycelium-config.workspace = true

# ------------------------------------------------------------------------------
# Dev dependencies
# ------------------------------------------------------------------------------

[dev-dependencies]
test-log = "0.2.8"
mockall = "0.11.4"

# ? ---------------------------------------------------------------------------
# ? LIBRARY
# ? ---------------------------------------------------------------------------

[lib]
name = "myc_core"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
