[package]
name = "mycelium-http-tools"
description = "Provide HTTP related elements to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

myc-core = { version = "6.2.0", path = "../core" }
mycelium-base = { version = "6.2.0", path = "../base" }
mycelium-config = { version = "6.2.0", path = "../config" }
mycelium-service = { version = "6.2.0", path = "../adapters/service" }

actix-web.workspace = true
actix-web-httpauth.workspace = true
awc.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
jwt.workspace = true
log.workspace = true
oauth2.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
lazy_static.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
tracing.workspace = true


# ? ----------------------------------------------------------------------------
# ? LIBRARY
# ? ----------------------------------------------------------------------------

[lib]
name = "myc_http_tools"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
