[package]
name = "mycelium-core"
version = "0.1.0"
edition = "2021"

# ? ---------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ---------------------------------------------------------------------------

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"

[dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"

[dependencies]

# * Required dependencies
mycelium-prisma = { path = "../myc_prisma" }
async-trait = "0.1"
clean-base = "0.1"
chrono = "0.4"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "2", features = ["actix_extras", "uuid"] }
uuid = { version = "1.1", features = ["v4", "serde", "fast-rng"] }

# ? ---------------------------------------------------------------------------
# ? LIBRARY
# ? ---------------------------------------------------------------------------

[lib]
name = "myc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
