[package]
name = "mycelium-prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"
version = "0.6.3"

[dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"
version = "0.6.3"

[[bin]]
name = "myc-prisma-cli"
path = "src/main.rs"

[lib]
name = "myc_prisma"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
