[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

# ? ---------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ---------------------------------------------------------------------------

[dependencies]
mycelium-prisma = { path = "../mycelium_prisma" }
actix-cors = { version = "0.6.2" }
actix-web-error = { version = "0.1" }
actix-web-error-derive = { version = "0.1" }
async-trait = "0.1"
clean-base = "0.1.1"
chrono = "0.4"
env_logger = "0.10"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.2" }
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# ? ---------------------------------------------------------------------------
# ? LIBRARY
# ? ---------------------------------------------------------------------------

[lib]
name = "myc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

# ? ---------------------------------------------------------------------------
# ? BINARIES
# ? ---------------------------------------------------------------------------

#[[bin]]
#name = "myc-api"
#path = "src/ports/api/main.rs"
