[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

# ? ---------------------------------------------------------------------------
# ? DEPENDENCIES
# ? ---------------------------------------------------------------------------

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"

[dependencies.prisma-client-rust-cli]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"

[dependencies]

# * Required dependencies
mycelium-prisma = { path = "../mycelium_prisma" }
async-trait = "0.1"
clean-base = "0.1"
chrono = "0.4"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4"
regex = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"
shaku_actix = "0.2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4", "serde", "fast-rng"] }

# * Optional dependencies
actix-cors = { version = "0.6.2", optional = true }
actix-web = { version = "4", optional = true }
actix-web-error = { version = "0.1", optional = true }
actix-web-error-derive = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
utoipa = { version = "2", features = ["actix_extras", "uuid"], optional = true }
utoipa-swagger-ui = { version = "3", features = ["actix-web"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

# ? ---------------------------------------------------------------------------
# ? LIBRARY
# ? ---------------------------------------------------------------------------

[lib]
name = "myc"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]

# ? ---------------------------------------------------------------------------
# ? BINARIES
# ? ---------------------------------------------------------------------------

public = "src/public"

[features]
cli-deps = ["clap"]
api-deps = [
    "actix-cors", 
    "actix-web", 
    "actix-web-error", 
    "actix-web-error-derive",
    "reqwest",
    "utoipa",
    "utoipa-swagger-ui",
]

[[bin]]
name = "myc-cli"
path = "src/ports/cli/main.rs"
required-features = ["cli-deps"]

[[bin]]
name = "myc-api"
path = "src/ports/api/main.rs"
required-features = ["api-deps"]
