[package]
name = "mycelium-key-value"
description = "Provide key-value adapters to the mycelium project."

version = "8.3.0+beta"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

async-trait.workspace = true
futures.workspace = true
lazy_static.workspace = true
lettre.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
shaku.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true


# ------------------------------------------------------------------------------
# Mycelium packages
# ------------------------------------------------------------------------------

myc-core.workspace = true
mycelium-base.workspace = true
mycelium-config.workspace = true
mycelium-adapters-shared-lib.workspace = true

# ------------------------------------------------------------------------------
# Dev dependencies
# ------------------------------------------------------------------------------

[dev-dependencies]
tokio.workspace = true

[lib]
name = "myc_kv"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
