[package]
name = "mycelium-memory-db"
description = "Provide memory database adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

myc-core = { version = "7.7.1", path = "../../core" }
mycelium-base = { version = "7.7.1", path = "../../base" }
mycelium-config = { version = "7.7.1", path = "../../config" }

shaku.workspace = true
tracing.workspace = true
uuid.workspace = true

actix-web = { version = "4", features = ["openssl"] }
async-trait = "0.1"
wildmatch = "2.1"


[lib]
name = "myc_mem_db"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
