[package]
name = "mycelium-memory-db"
description = "Provide memory database adapters to the mycelium project."

edition.workspace = true
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true


[dependencies]

myc-core = { version = "8.0.1-beta.2", path = "../../core" }
mycelium-base = { version = "8.0.1-beta.2", path = "../../lib/base" }
mycelium-config = { version = "8.0.1-beta.2", path = "../../lib/config" }

serde.workspace = true
shaku.workspace = true
tracing.workspace = true
uuid.workspace = true
wildmatch.workspace = true

actix-web = { version = "4", features = ["openssl"] }
async-trait = "0.1"


[lib]
name = "myc_mem_db"
path = "src/lib.rs"
crate-type = ["staticlib", "lib"]
